fixed footer alignment issues. Fixed styling on catalog listing page

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -5946,7 +5946,7 @@ h2 {
     background: #75BD80;
     border-color: #356e3e; }
 
-.address-break {
+.address-break span {
   display: block; }
 
 /* Single Product Template */
