--- a/sass/partials/shop.scss
+++ b/sass/partials/shop.scss
@@ -240,6 +240,6 @@ li.product:nth-child(2n), .woocommerce-page ul.products[class*=columns-] li.prod
 	}
 }
 
-.address-break{
+.address-break span{
 	display:  block;
 }
